# data-science-labs

./: .gitignore  pyproject.toml  requirements.txt
lab-1/: BTC-USD_2022-01-01_2023-01-01.json  lab-1-notebook.ipynb
lab-2/: lab-2-notebook.ipynb
lab-3/: data.csv  lab-3-notebook.ipynb
lab-4/: jobs.json
lab-5/: lab-5-notebook.ipynb
lab-6/: BTC-USD_2018-01-01_2023-01-01.json  lab-6-notebook.ipynb
lab-7/: Data_Set_3.csv  lab-7-notebook.ipynb
mcw/: mcw-notebook.ipynb
pass/: pass-notebook.ipynb
