[project]
name = "datascience"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "matplotlib>=3.9.3",
    "nltk>=3.9.1",
    "notebook>=7.3.1",
    "numpy==1.26.4",
    "opencv-python>=4.10.0.84",
    "ortools>=9.11.4210",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "tensorflow[and-cuda]==2.18.0",
    "wordcloud>=1.9.4",
]
